--- a/test/fixtures/fortunes.yml
+++ b/test/fixtures/fortunes.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  text: MyString
+  id: 1
+  text: eat chinese food
 
 two:
-  text: MyString
+  id: 2
+  text: lucky numbers are 4 5 6
